package com.ia.transaction.view;

public enum TransactionScope {
    BUSINESS,PERSONAL
}
