package com.ia.transaction.view;

public enum TransactionType {
    DEBIT,
    CREDIT
}
