@startuml

package loader #DDDDDD{
 interface Loader<S,O,T> {
   +load(S): long
 }
  interface TransactionLoader<S,O> extends Loader {
  }
  class CapitaleOneLoader implements TransactionLoader {
  }
  class DesjardinsCCLoader implements TransactionLoader {
  }
  class DesjardinsEOPLoader implements TransactionLoader {
  }
}
package parser #DDDDDD{
interface Parser<T,R> {
  +parse(T):R
}
interface CsvParser<R> extends Parser {
  +parse(File): List<R>
  +default parse(File): List<R>
}
interface PdfParser<R> extends Parser {
+parse(File): List<R>
+default extrctContent(File):Stream<String>
}
class CapitaleOneCCParser implements CsvParser{
 +parse(File):List<CapitaleOneCCTransaction>
}
class DesjardinsCCParser implements PdfParser {
 +parse(File):List<DesjardinsCCTransaction>
}
class DesjardinsEopParser implements CsvParser {
    +parse(File):List<DesjardinsEOPTransaction>
}
}
package repository #DDDDDD{
 interface TransactionRepository extends JpaRepository
 interface CategoryRepository extends JpaRepository
}
package model #DDDDDD{
class CapitaleOneCCTransaction
class DesjardinsCCTransaction
class DesjardinsEOPTransaction
}
package view #DDDDDD{
class Transaction
class TransactionCategory
enum TransactionType {
    +DEBIT
    +CREDIT
}
enum TransactionScope{
 +PERSONAL
 +BUSINESS
}
}
package mapper #DDDDDD {
interface Mapper<S,O,T> {
 +mapFrom(S):List<T>
 +map(O):Optional<T>
}
 abstract class TransactionMapper<S,O> implements Mapper {
 #map(O,catFunction, converter):Optional<Transaction>
 }

 class CapitaleOneMapper extends TransactionMapper{
  +map(CapitaleOneCCTransaction):Optional<Transaction>
 }

 class DesjardinsCcMapper extends TransactionMapper {
 +map(DesjardinsCCTransaction):Optional<Transaction>
 }

 class DesjardinsEopMapper extends TransactionMapper {
    +map(DesjardinsEOPTransaction):Optional<Transaction>
 }
}

TransactionMapper <..Parser: use <
CapitaleOneCCParser <..CapitaleOneCCTransaction: use <
DesjardinsCCParser <.. DesjardinsCCTransaction: use <
DesjardinsEopParser <.. DesjardinsEOPTransaction: use <
Transaction <..TransactionCategory: use <
Transaction <..TransactionType: use <
Transaction <..TransactionScope: use <
TransactionLoader <..JpaRepository: use <
TransactionRepository <..Transaction: use <
CategoryRepository <..TransactionCategory: use <
TransactionLoader <.. TransactionMapper: use <
TransactionMapper <.. JpaRepository: use <
@enduml